--- a/core-graphics/core-graphics/Base.lproj/Main.storyboard
+++ b/core-graphics/core-graphics/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -23,7 +24,7 @@
                                     <constraint firstAttribute="height" constant="512" id="b0T-E2-0WN"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BUo-Z6-dhL">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BUo-Z6-dhL">
                                 <rect key="frame" x="274" y="562" width="52" height="30"/>
                                 <state key="normal" title="Redraw"/>
                                 <connections>
@@ -34,7 +35,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="6MA-te-Tt7" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="8On-Z4-QLi"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="BUo-Z6-dhL" secondAttribute="trailing" constant="254" id="ARx-Ch-g0t"/>
                             <constraint firstItem="6MA-te-Tt7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BJN-6m-hUl"/>
+                            <constraint firstItem="BUo-Z6-dhL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="254" id="Uam-mp-lFw"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="BUo-Z6-dhL" secondAttribute="bottom" constant="8" id="cPB-Vx-Nyj"/>
+                            <constraint firstItem="BUo-Z6-dhL" firstAttribute="top" secondItem="6MA-te-Tt7" secondAttribute="bottom" constant="6" id="lq1-4C-Brf"/>
                         </constraints>
                     </view>
                     <connections>
